# engram

./: .dockerignore  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/: index.html
architecture/entity-gated-ingestion/: index.html
architecture/episodic-memory/: index.html
architecture/recall-pipeline/: index.html
architecture/semantic-graph/: index.html
deployment/: index.html
deployment/docker/: index.html
development/: index.html
development/changelog/: index.html
development/testing/: index.html
docs/: brain-features-architecture.md  code-standards.md  codebase-summary.md  deployment-guide.md  deployment-operations.md  plugin-authoring.md  project-changelog.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
integrations/: index.html
integrations/claude-code/: index.html
integrations/codex/: index.html
integrations/cursor/: index.html
integrations/federated-providers/: index.html
integrations/gemini-cli/: index.html
integrations/goose/: index.html
integrations/openclaw/: index.html
mkdocs_docs/: index.md
mkdocs_docs/architecture/: entity-gated-ingestion.md  episodic-memory.md  index.md  recall-pipeline.md  semantic-graph.md
mkdocs_docs/deployment/: docker.md  index.md
mkdocs_docs/development/: changelog.md  index.md  testing.md
mkdocs_docs/getting-started/: configuration.md  index.md  installation.md
mkdocs_docs/integrations/: claude-code.md  codex.md  cursor.md  federated-providers.md  gemini-cli.md  goose.md  index.md  openclaw.md
mkdocs_docs/reference/: cli.md  environment-variables.md  http-api.md  mcp-tools.md  websocket.md
mkdocs_docs/stylesheets/: extra.css
reference/cli/: index.html
reference/environment-variables/: index.html
reference/http-api/: index.html
reference/mcp-tools/: index.html
search/: search_index.json
tests/: benchmark_performance.py  conftest.py  test_auth.py  test_auto_consolidation.py  test_auto_memory.py  test_benchmark_runner.py  test_brain_features.py  test_cache_degradation.py  test_cli_commands.py  test_client.py  test_config.py  test_consolidation_engine.py  test_decision_layer.py  test_edge_cases.py  test_entity_resolver.py  test_episodic_search.py  test_episodic_store.py  test_extractor.py  test_feedback_auto_adjust.py  test_feedback_loop.py  test_fts_index.py  test_fusion_formatter.py  test_graph_ui.py  test_health_feature_registry.py  test_http_client.py  test_http_server.py  test_integration.py  test_integration_critical_flows.py  test_integration_wiring.py  test_mcp_episodic_tools.py  test_mcp_semantic_reasoning_tools.py  test_mcp_server.py  test_memory_extractor.py  test_models.py  test_new_features.py  test_observability.py  test_parallel_search.py  test_pending_queue.py  test_performance_batch_and_cache.py  test_poisoning_guard.py  (+17 more)
(+196 files in other folders)
