[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.2.0"
description = "Memory traces for AI agents - Think like human"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "litellm>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyjwt>=2.8.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.scripts]
engram = "engram.cli:app"
engram-mcp = "engram.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
