[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-mem"
version = "0.4.0"
description = "Memory traces for AI agents - Think like human"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Do Cao Hieu", email = "docaohieu2808@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "litellm>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyjwt>=2.8.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
tui = ["textual>=0.50.0"]

[project.scripts]
engram = "engram.cli:app"
engram-mcp = "engram.mcp.server:main"

[project.urls]
Homepage = "https://github.com/docaohieu2808/Engram-Mem"
Repository = "https://github.com/docaohieu2808/Engram-Mem"
Issues = "https://github.com/docaohieu2808/Engram-Mem/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests",
    "load: load and stress tests (excluded from CI)",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
